--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245708.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/08/151015074347100311-600x400.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245708.md#1" target="_blank">中国华融负债超万亿 6800亿债务即将到期</a><br></h3>根据中国华融资产管理股份有限公司近日公告显示，该公司资产负债率高达96.09%，而有息负债规模超过1......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/5-11-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1" target="_blank">分析：北京两举动曝中共军队致命弱点</a><br></h3>中共近年不断增加军费，企图在2049年打造“一流军队”。但外界已观......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245613.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13199064-fan-bingbing-zhao-wei-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245613.md#1" target="_blank">中共继续“割韭菜” 令明星网红限期补税</a><br></h3>继2018年中共当局强化影视行业税收监管、明星补税约118亿元之后......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235684-GettyImages-1235242848-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank">【一线采访】厦门多家医院停诊 民间恐慌</a><br></h3>福建这一波疫情不仅学校成为重灾区，目前官方承认的光厦门就有三家医院......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235684-GettyImages-1235242848-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank">【一线采访】厦门多家医院停诊 民间恐慌</a><br></h3>福建近期的中共病毒（新冠肺炎）疫情中，不仅学校成为重灾区，而且至少......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245532.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245610-ee830f4ae7a6ff64982673c9490d5536-320x200.png" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245532.md#1" target="_blank">青海湖出现龙吸水奇观 网友：太震撼了</a><br></h3>9月19日，青海湖上空出现“龙吸水”奇观，网友直呼：太震撼了！...<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245504.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13004871-501538-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245504.md#1" target="_blank">中共突禁台湾水果 蔡英文：违反国际贸易规范</a><br></h3>中共9月19日突然又以“虫害”为由叫停台湾水果的进口。台湾总统和副......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245484.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/06/Screen-Shot-2018-05-31-at-3.43.30-PM-320x200.png" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245484.md#1" target="_blank">DAFOH主任：中共活摘器官行径可输出到他国</a><br></h3>“医生反对活摘器官组织”（DAFOH）创办人及执行主任托斯坦·特雷......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
@@ -13,6 +13,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245262.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245269-GettyImages-1335542330-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245262.md#1" target="_blank">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br></h3>菲律宾拳王巴乔（Manny Pacquiao）今天（9月19日）表......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245052.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241477-20210910-600x400-1-320x200.jpeg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245052.md#1" target="_blank">反活摘器官峰会吁各国立法 惩治中共暴行</a><br></h3>“打击及防制活摘器官之世界峰会”第二场线上会议于9月18日举行，长......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244627.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13226843-GettyImages-1227509190-600x400-320x200.jpeg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244627.md#1" target="_blank">【中国观察】李克强“灭火”党刊重提林彪政变</a><br></h3>中共总理李克强日前出面说对民企会“一视同仁”。但几天前党媒连续解读......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/07/id13124464-Untitled-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242254.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242255-0917_1200x800-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242254.md#1" target="_blank">【时事军事】日本三款导弹 对准中共海军</a><br></h3>日本担心海峡冲突会将日本卷入其中，因此发展进攻型武器以期先敌打击。...<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244839.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245030-def238aeb39097cda46268db3f20e1d0-320x200.png" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244839.md#1" target="_blank">贵州接送学生客船侧翻 致10遇难5失踪</a><br></h3>9月18日，一艘接送学生的客船在贵州省六盘水市六枝特区牂牁江发生侧......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244915.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244915.md#1" target="_blank">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br></h3>河北威云信息科技有限公司的创始人兼法定代表人孙某印近日自杀未遂。其......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
@@ -24,7 +25,6 @@
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank">恒大受害人患病求兑付被拒 维权遭警传唤</a><br></h3>恒大集团旗下的“恒大财富”理财产品逾期未兑付，18日凌晨，恒大集团......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244420.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244420.md#1" target="_blank">三退声明精选（2021/09/18）</a><br></h3>我自愿退出邪恶的共产党，天要灭这恶党，一定退出这邪恶组织，绝不做陪......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/13/n13230075.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13230195-2002-12-31-zc-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/13/n13230075.md#1" target="_blank">律师眼中承受苦难的圣徒：绝食四年对抗中共</a><br></h3>中共大肆宣传其所谓“伟光正”，愚弄百姓。本系列报导记述中国社会中的......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/07/id13124464-Untitled-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244209.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/05/180104085653100484-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244209.md#1" target="_blank">李嘉诚卖掉上海一地产项目 套现21亿</a><br></h3>近日，李嘉诚家族卖掉了位于上海市静安区的上海世纪盛荟广场，引发舆论......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243883.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243884-0918_1200x800-1-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243883.md#1" target="_blank">【财商天下】财政赤字惊人增长 中共防公共风险</a><br></h3>中共财政赤字年增14%，2025年至少10万亿？经济不好钱难收，可......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244109.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244143-000_9MX3VE-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244109.md#1" target="_blank">如间谍小说 美英澳核潜艇协议达成细节曝光</a><br></h3>9月15日，美国、英国、澳洲宣布成立新的安全联盟AUKUS，且美英......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月19日</td></tr>
