--- a/gb/nf3046.md
+++ b/gb/nf3046.md
@@ -36,7 +36,6 @@
 
 表面原因是：许那等在网.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月31日 5:22 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/27/n13191747.md#1" target="_blank">被学校逼打疫苗 大陆女生愤而退出中共组织</a><br></h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/27/n13191747.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192579-608122047461017-150x120.gif" align ="left"></a>本篇收录了几篇近日发表在在大纪元退党网站上的三退声明。他们中有外企中高管、海外华人、大陆的中学生等。他们以亲身的经历说明了自己三退的原因，从中揭示了中共的邪恶本性。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月30日 4:18 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245816.md#1" target="_blank">三退声明精选（2021/09/19）</a><br></h3>大一时被恶老师和学姐坑蒙拐骗地带着申请入党，成为所谓的“入党积极分子”。但我一直心里很困惑，直到在推特上看到小婷姐（小婷@ttingxiao）和其他支持正义和自由的朋友揭发的真相，我才翻然悔悟并对自己的所作所为感到羞愧。现在我严正声明，沈冰倩从此退出少先队、共青团，未来也不会加入任何与中共有关的组织！我曾被邪教蒙蔽，但现在我愿意为了自由和正义而战，洗脱身上无.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 8:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244420.md#1" target="_blank">三退声明精选（2021/09/18）</a><br></h3>我自愿退出邪恶的共产党，天要灭这恶党，一定退出这邪恶组织，绝不做陪葬。本人看清了中共给老百姓洗脑，有反抗的就镇压，这就是所谓法治社会的黑暗。我选择三退，对共产党充满的厌恶。只有真像才能挽救无数人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 9:49 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13241234.md#1" target="_blank">传单：传真天地（第8期）</a><br></h3>每天念千遍大法好，92岁老人骨裂愈合了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 5:15 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13237748.md#1" target="_blank">三退声明精选（2021/09/14）</a><br></h3>我们经常接触各层官员包括公安，很多都非常反感腐败党的各种奇奇怪怪的腐败行为，比如今年7月1号的庆祝活动，我们附近的广告公司一个公司就做了几十万的业务，全国都为了这个毫无意义的活动开销几十亿不止，好多老百姓这几年生活好困难，看到这么铺张浪费，我们好心疼！我的爷爷辈也有大跃进浮夸风活活饿死的，饿死几千万中国人呐！我知道退党团队保平安，我要退出被欺骗加入的少先队.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 11:53 AM							</td></tr>
@@ -53,5 +52,6 @@
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/26/n13188324.md#1" target="_blank">三退声明精选（2021/08/25）</a><br></h3>活到老学到老，随着年龄的增长，感觉不是越老眼越花，而是越老看的越清楚，越老越明白，看明白了，也想明白了，我个人没有做过任何帮助中共坑害任何老百姓的事情，既然自己清清白白，那就退出这个邪恶的组织，为了亲人，极端的话我也不想多说，既然走正常渠道无法退出这个邪恶的组织，那我就通过全球退党中心向全世界声明我正式退出中国共产党组织，做一个普普通通的老百姓，如果我向全球.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月26日 11:00 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/25/n13185459.md#1" target="_blank">三退声明精选（2021/08/24）</a><br></h3>现在觉得自己的灵魂需要得到救赎。远离这个中共邪教恐怖主义的一切组织，才是良好的开始。我爱中国的神传文化和华夏文明和各种宗教文化，但是不爱中共。我在此声明退出中共的少先队组织，并与共产党邪教恐怖组织犯罪集团彻底划清界限，站在人类普世价值文明的正义一边，从此真正做一个拥有中国传统文化、华夏文明、宗教信仰普世价值的善良的中国人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月25日 8:53 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/22/n13178969.md#1" target="_blank">三退声明精选（2021/08/21）</a><br></h3>共产党现在已经是人类最大的毒瘤了，如果这个毒瘤继续生长，将会对人类造成巨大的灾难！国内很多人被共产党长期洗脑，总是以为现在吃饱了、穿暖了是受共产党所赐。其实，人们之所以能吃饱穿暖，恰恰是因为市场经济和国际自由贸易以及中国老百姓的勤劳，跟共产党没有任何关系！我当初年轻无知，被人骗了，加入了中共，现在感到十分后悔。本人决定从此退出中共邪党，并希望中国共产党这个史.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月22日 10:27 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/8/21/n13177565.md#1" target="_blank">三退声明精选（2021/08/20）</a><br></h3>我是一名外企的中高层管理人员，可以自由的看到国外的咨询、信息，也多次出国，看到国内外完全不同的报道和事实的真相。几十年前，我的爷爷就是在三反、五反期间跳楼自杀的，现在我的大学同学也因为信仰法轮功多次入狱被迫害。我很同情和敬重他。我知道中共有多么独裁和黑暗。我曾经入过党，不想和它一起走向灭亡。现在声明退出，取消“为共产主义奋斗终身”的誓约，求神佛保佑我平安、健.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月21日 1:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/vuwsmg331/djy/blob/master/gb/nf3046.md#1<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3046.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vuwsmg331/djy/blob/master/gb/nf3046.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046.htm">https://www.epochtimes.com/gb/nf3046.htm</a>    （国内需<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
